--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -43,7 +43,7 @@ ink-as-dependency = []
 ink-experimental-engine = ["ink_env/ink-experimental-engine"]
 [workspace]
 members = [
-    "pool",
+    "periphery/poolInitialize",
     "core/factory",
 
 ]
