--- a/contracts/periphery/poolInitialize/Cargo.toml
+++ b/contracts/periphery/poolInitialize/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pool"
+name = "poolInitialize"
 version = "3.0.0-rc8"
 authors = ["Parity Technologies <cloudweisz@gmail.com>"]
 edition = "2021"
@@ -13,6 +13,7 @@ ink_lang = { version = "3.0.0-rc8", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
+factory = {version = "3.0.0-rc8",path="../../core/factory", default-features = false,features = ["ink-as-dependency"]}
 
 [dependencies.sp-core]
 default-features = false
@@ -21,7 +22,7 @@ tag = 'devhub/latest'
 version = '4.0.0-dev'
 
 [lib]
-name = "pool"
+name = "poolInitialize"
 path = "lib.rs"
 crate-type = ["cdylib"]
 
@@ -38,6 +39,7 @@ std = [
     "scale-info",
     "scale-info/std",
     "sp-core/std",
+    "factory/std",
 ]
 ink-as-dependency = []
 ink-experimental-engine = ["ink_env/ink-experimental-engine"]
