--- a/contracts/primitives/Cargo.toml
+++ b/contracts/primitives/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pool"
+name = "primitives"
 version = "3.0.0-rc8"
 authors = ["Parity Technologies <cloudweisz@gmail.com>"]
 edition = "2021"
@@ -13,7 +13,7 @@ ink_lang = { version = "3.0.0-rc8", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
-primitives = {version = "3.0.0-rc8",path="../../primitives/", default-features = false,features = ["ink-as-dependency"]}
+
 
 
 [dependencies.sp-core]
@@ -23,7 +23,7 @@ tag = 'devhub/latest'
 version = '4.0.0-dev'
 
 [lib]
-name = "pool"
+name = "primitives"
 path = "lib.rs"
 crate-type = ["cdylib","rlib",]
 
@@ -40,7 +40,6 @@ std = [
     "scale-info",
     "scale-info/std",
     "sp-core/std",
-    "primitives/std",
 ]
 ink-as-dependency = []
 ink-experimental-engine = ["ink_env/ink-experimental-engine"]
