--- a/contracts/base/erc20/Cargo.toml
+++ b/contracts/base/erc20/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "factory"
+name = "erc20"
 version = "3.0.0-rc8"
-authors = ["Parity Technologies <cloudweisz@gmail.com>"]
+authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2021"
+resolver = "2"
 
 [dependencies]
 ink_primitives = { version = "3.0.0-rc8", default-features = false }
@@ -13,36 +14,27 @@ ink_lang = { version = "3.0.0-rc8", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
-hex = { version = "0.4", default-features = false,features = ["alloc"]}
-pool = {version = "3.0.0-rc8",path="../../core/pool", default-features = false,features = ["ink-as-dependency"]}
-primitives = {version = "3.0.0-rc8",path="../../primitives/", default-features = false}
-[dependencies.sp-core]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'devhub/latest'
-version = '4.0.0-dev'
 
 [lib]
-name = "factory"
+name = "erc20"
 path = "lib.rs"
-crate-type = ["cdylib","rlib",]
+crate-type = [
+	# Used for normal contract Wasm blobs.
+	"cdylib",
+]
+
+# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
+[profile.release]
+overflow-checks = false
 
 [features]
 default = ["std"]
 std = [
-    "ink_primitives/std",
-    "ink_metadata",
     "ink_metadata/std",
     "ink_env/std",
     "ink_storage/std",
-    "ink_lang/std",
+    "ink_primitives/std",
     "scale/std",
-    "scale-info",
     "scale-info/std",
-    "sp-core/std",
-    "pool/std",
-    "hex/std",
-    "primitives/std",
 ]
 ink-as-dependency = []
-ink-experimental-engine = ["ink_env/ink-experimental-engine"]
