--- a/contracts/core/pool/Cargo.toml
+++ b/contracts/core/pool/Cargo.toml
@@ -13,7 +13,7 @@ ink_lang = { version = "3.0.0-rc8", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
-primitives = {version = "3.0.0-rc8",path="../../primitives/", default-features = false,features = ["ink-as-dependency"]}
+primitives = {version = "3.0.0-rc8",path="../../primitives/", default-features = false}
 
 
 [dependencies.sp-core]
