--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Parity Technologies <cloudweisz@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-ink_primitives = { version = "3.0.0-rc9", default-features = false }
-ink_metadata = { version = "3.0.0-rc9", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3.0.0-rc9", default-features = false }
-ink_storage = { version = "3.0.0-rc9", default-features = false }
-ink_lang = { version = "3.0.0-rc9", default-features = false }
+ink_primitives = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false }
+ink_metadata = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
+ink_env = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false }
+ink_storage = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false }
+ink_lang = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
@@ -34,12 +34,10 @@ std = [
     "scale-info/std",
 ]
 ink-as-dependency = []
-ink-experimental-engine = ["ink_env/ink-experimental-engine"]
 [workspace]
 members = [
     "primitives/",
     "core/pool",
     "core/factory",
     "periphery/poolInitialize",
-    "base/erc20/",
 ]
