--- a/contracts/core/pool/Cargo.toml
+++ b/contracts/core/pool/Cargo.toml
@@ -5,11 +5,14 @@ authors = ["Parity Technologies <cloudweisz@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-ink_primitives = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false }
-ink_metadata = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
-ink_env = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false }
-ink_storage = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false }
-ink_lang = { branch = "master", git = "https://github.com/paritytech/ink", default-features = false }
+ink_primitives = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
+ink_metadata = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
+ink_env = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
+ink_storage = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
+ink_lang = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
+ink_prelude = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
+
+brush = { tag = "v1.5.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false}
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
@@ -35,5 +38,12 @@ std = [
     "scale-info",
     "scale-info/std",
     "primitives/std",
+    "brush/std",
 ]
 ink-as-dependency = []
+[profile.dev]
+codegen-units = 16
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
