--- a/swap/contracts/core/factory/Cargo.toml
+++ b/swap/contracts/core/factory/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pool"
+name = "factory"
 version = "3.0.0-rc9"
 authors = ["Parity Technologies <cloudweisz@gmail.com>"]
 edition = "2021"
@@ -12,16 +12,17 @@ ink_storage = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", defau
 ink_lang = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
 ink_prelude = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
 
-brush = { tag = "v1.5.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false}
+brush = { tag = "v1.5.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp34"] }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
-primitives = {version = "3.0.0-rc9",path="../../primitives/", default-features = false}
-
+hex = { version = "0.4", default-features = false,features = ["alloc"]}
+pool = {version = "3.0.0-rc9",path="../../core/pool", default-features = false,features = ["ink-as-dependency"]}
+primitives = {version = "3.0.0-rc9",path="../../../primitives/", default-features = false}
 
 
 [lib]
-name = "pool"
+name = "factory"
 path = "lib.rs"
 crate-type = ["cdylib","rlib",]
 
@@ -37,10 +38,13 @@ std = [
     "scale/std",
     "scale-info",
     "scale-info/std",
+    "pool/std",
+    "hex/std",
     "primitives/std",
     "brush/std",
 ]
 ink-as-dependency = []
+
 [profile.dev]
 codegen-units = 16
 overflow-checks = false
