--- a/swap/contracts/periphery/NonfungiblePositionManager/Cargo.toml
+++ b/swap/contracts/periphery/NonfungiblePositionManager/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "poolInitialize"
+name = "NonfungiblePositionManager"
 version = "3.0.0-rc9"
-authors = ["Parity Technologies <cloudweisz@gmail.com>"]
+authors = ["HiTech<cloudweisz@gmail.com>"]
 edition = "2021"
 
 [dependencies]
@@ -22,7 +22,7 @@ factory = {version = "3.0.0-rc9",path="../../core/factory", default-features = f
 
 
 [lib]
-name = "poolInitialize"
+name = "NonfungiblePositionManager"
 path = "lib.rs"
 crate-type = ["cdylib"]
 
