--- a/swap/Cargo.toml
+++ b/swap/Cargo.toml
@@ -15,7 +15,7 @@ brush = { tag = "v1.5.0", git = "https://github.com/Supercolony-net/openbrush-co
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
 swap_project_derive = { path = "derive" }
-
+primitives = {version = "3.0.0-rc9",path="./primitives/", default-features = false}
 [lib]
 name = "crabswap"
 path = "lib.rs"
@@ -36,6 +36,7 @@ std = [
     "scale-info",
     "scale-info/std",
     "brush/std",
+    "primitives/std",
 ]
 ink-as-dependency = []
 [workspace]
