--- a/swap/Cargo.toml
+++ b/swap/Cargo.toml
@@ -10,6 +10,7 @@ ink_metadata = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", defa
 ink_env = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
 ink_storage = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
 ink_lang = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
+# ink_lang_ir = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false, optional = true }
 ink_prelude = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
 brush = { tag = "v1.5.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false}
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
@@ -32,12 +33,22 @@ std = [
     "ink_env/std",
     "ink_storage/std",
     "ink_lang/std",
+    # "ink_lang_ir/std",
     "scale/std",
     "scale-info",
     "scale-info/std",
     "brush/std",
     "primitives/std",
 ]
+
+erc721_permit = [
+    "swap_project_derive/erc721_permit",
+]
+
+pool_initial = [
+    "swap_project_derive/pool_initial",
+]
+
 ink-as-dependency = []
 [workspace]
 members = [
