--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "encodable",
         "IERC",
         "inheritdoc",
+        "Mintable",
         "patract",
         "polkadot",
         "redspot",
