--- a/swap/contracts/core/base/psp22/Cargo.toml
+++ b/swap/contracts/core/base/psp22/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "my_psp22"
+name = "stable_coin_contract"
 version = "1.5.0"
-authors = ["Supercolony <green.baneling@supercolony.net>"]
+authors = ["Supercolony <dominik.krizo@supercolony.net>"]
 edition = "2021"
 
 [dependencies]
@@ -19,10 +19,9 @@ scale-info = { version = "2", default-features = false, features = ["derive"], o
 brush = { tag = "v1.5.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }
 
 [lib]
-name = "my_psp22"
+name = "stable_coin_contract"
 path = "lib.rs"
 crate-type = [
-    # Used for normal contract Wasm blobs.
     "cdylib",
 ]
 
@@ -44,9 +43,9 @@ std = [
 ]
 ink-as-dependency = []
 
-[profile.dev]
-codegen-units = 16
-overflow-checks = false
+# [profile.dev]
+# codegen-units = 16
+# overflow-checks = false
 
-[profile.release]
-overflow-checks = false
+# [profile.release]
+# overflow-checks = false
