--- a/swap/contracts/core/base/weth9/Cargo.toml
+++ b/swap/contracts/core/base/weth9/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stable_coin_contract"
+name = "weth9_contract"
 version = "1.5.0"
 authors = ["Supercolony <dominik.krizo@supercolony.net>"]
 edition = "2021"
@@ -17,9 +17,9 @@ scale-info = { version = "2", default-features = false, features = ["derive"], o
 
 # These dependencies
 brush = { tag = "v1.5.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }
-
+crabswap = { path = "../../../../", default-features = false}
 [lib]
-name = "stable_coin_contract"
+name = "weth9_contract"
 path = "lib.rs"
 crate-type = [
     "cdylib",
@@ -37,6 +37,8 @@ std = [
     "scale/std",
     "scale-info",
     "scale-info/std",
+    "crabswap/std",
+
     # These dependencies
     "brush/std",
 ]
