--- a/swap/contracts/core/pool/Cargo.toml
+++ b/swap/contracts/core/pool/Cargo.toml
@@ -46,9 +46,9 @@ std = [
     "crabswap/std",
 ]
 ink-as-dependency = []
-# [profile.dev]
-# codegen-units = 16
-# overflow-checks = false
+[profile.dev]
+codegen-units = 16
+overflow-checks = false
 
-# [profile.release]
-# overflow-checks = false
+[profile.release]
+overflow-checks = false
