--- a/swap/Cargo.toml
+++ b/swap/Cargo.toml
@@ -64,12 +64,20 @@ ink-as-dependency = []
 members = [
     "primitives/",
     "libs/",
+    # "contracts/core/base/psp22",
+    # "contracts/core/base/weth9",
+    # "contracts/core/pool/",
+    # "contracts/core/factory/",
+    # "contracts/periphery/NonfungiblePositionManager/",
+    "derive/"
+]
+
+exclude = [
     "contracts/core/base/psp22",
     "contracts/core/base/weth9",
     "contracts/core/pool/",
     "contracts/core/factory/",
     "contracts/periphery/NonfungiblePositionManager/",
-    "derive/"
 ]
 
 [profile.dev]
