--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-    "name": "v3-perip",
+    "name": "crabswap-contracts",
     "version": "0.1.0",
     "private": true,
-    "engines": {
-        "node": ">=14.x"
-    },
-    "resolutions": {
-        "@polkadot/api": "7.5.1",
-        "@polkadot/api-contract": "7.5.1",
-        "@polkadot/types": "7.5.1",
-        "@polkadot/keyring": "8.3.3",
-        "@polkadot/util": "8.3.3",
-        "@polkadot/wasm-crypto": "4.5.1",
-        "@polkadot/util-crypto": "8.3.3",
-        "typescript": "4.5.4"
-    },
     "dependencies": {
-        "@redspot/chai": "0.13.3",
-        "@redspot/decimals": "0.13.3",
-        "@redspot/explorer": "0.13.3",
-        "@redspot/known-types": "0.13.3",
-        "@redspot/patract": "0.13.3",
-        "@redspot/watcher": "0.13.3",
-        "@types/chai": "^4.2.14",
-        "@types/mocha": "^8.0.3",
-        "chai": "^4.2.0",
-        "redspot": "^0.13.3",
-        "typescript": "^4.5.4"
+      "@babel/core": "^7.7.4",
+      "@babel/plugin-transform-runtime": "^7.14.2",
+      "@babel/preset-env": "^7.7.4",
+      "@babel/register": "^7.7.4",
+      "@redspot/patract": "^0.13.5",
+      "@redspot/gas-reporter": "^0.13.5",
+      "@redspot/watcher": "^0.13.5",
+      "@redspot/explorer": "^0.13.5",
+      "@redspot/chai": "^0.13.4",
+      "@redspot/decimals": "^0.13.4",
+      "@types/chai": "^4.3.0",
+      "@types/chai-as-promised": "^7.1.5",
+      "@types/mocha": "^8.0.3",
+      "@typescript-eslint/eslint-plugin": "^4.8.2",
+      "@typescript-eslint/parser": "^4.8.2",
+      "chai": "^4.3.6",
+      "chai-as-promised": "^7.1.1",
+      "eslint": "^7.26.0",
+      "eslint-plugin-import": "^2.22.1",
+      "eslint-plugin-node": "^11.1.0",
+      "eslint-plugin-promise": "^5.1.0",
+      "redspot": "^0.13.5"
     },
-    "module": "true",
     "scripts": {
-        "build": "yarn redspot compile",
-        "test": "yarn redspot test --no-compile",
-        "explorer": "yarn redspot explorer"
+      "build:release": "npx redspot compile --release",
+      "build": "npx redspot compile",
+      "test:redspot": "npx redspot test",
+      "test:mocha": "mocha --require @babel/register --require ts-node/register --require ./tests/setup/hooks.ts --recursive ./tests --extension \".ts\" --exit --timeout 120000",
+      "test": "yarn build:release && yarn test:mocha"
     }
-}
+  }
+  
