--- a/swap/Cargo.toml
+++ b/swap/Cargo.toml
@@ -64,20 +64,23 @@ ink-as-dependency = []
 members = [
     "primitives/",
     "libs/",
-    # "contracts/core/base/psp22",
-    # "contracts/core/base/weth9",
-    # "contracts/core/pool/",
-    # "contracts/core/factory/",
-    # "contracts/periphery/NonfungiblePositionManager/",
-    "derive/"
-]
-
-exclude = [
+    "derive/",
     "contracts/core/base/psp22",
     "contracts/core/base/weth9",
     "contracts/core/pool/",
     "contracts/core/factory/",
     "contracts/periphery/NonfungiblePositionManager/",
+    "contracts/periphery/NonfungibleTokenPositionDescriptor/",
+    
+]
+
+exclude = [
+    # "contracts/core/base/psp22",
+    # "contracts/core/base/weth9",
+    # "contracts/core/pool/",
+    # "contracts/core/factory/",
+    # "contracts/periphery/NonfungiblePositionManager/",
+    # "contracts/periphery/NonfungibleTokenPositionDescriptor/",
 ]
 
 [profile.dev]
