--- a/swap/contracts/core/base/psp22/Cargo.toml
+++ b/swap/contracts/core/base/psp22/Cargo.toml
@@ -42,9 +42,9 @@ std = [
 ]
 ink-as-dependency = []
 
-# [profile.dev]
-# codegen-units = 16
-# overflow-checks = false
+[profile.dev]
+codegen-units = 16
+overflow-checks = false
 
-# [profile.release]
-# overflow-checks = false
+[profile.release]
+overflow-checks = false
