--- a/swap/contracts/periphery/NonfungibleTokenPositionDescriptor/Cargo.toml
+++ b/swap/contracts/periphery/NonfungibleTokenPositionDescriptor/Cargo.toml
@@ -41,3 +41,9 @@ std = [
     "crabswap/std",
 ]
 ink-as-dependency = []
+[profile.dev]
+codegen-units = 16
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
