--- a/swap/contracts/core/base/weth9/Cargo.toml
+++ b/swap/contracts/core/base/weth9/Cargo.toml
@@ -44,9 +44,9 @@ std = [
 ]
 ink-as-dependency = []
 
-# [profile.dev]
-# codegen-units = 16
-# overflow-checks = false
+[profile.dev]
+codegen-units = 16
+overflow-checks = false
 
-# [profile.release]
-# overflow-checks = false
+[profile.release]
+overflow-checks = false
