--- a/swap/contracts/periphery/NonfungiblePositionManager/Cargo.toml
+++ b/swap/contracts/periphery/NonfungiblePositionManager/Cargo.toml
@@ -19,7 +19,7 @@ scale-info = { version = "2", default-features = false, features = ["derive"], o
 
 
 # factory = {version = "3.0.0-rc9",path="../../core/factory", default-features = false,features = ["ink-as-dependency"]}
-crabswap = { path = "../../../", default-features = false,features=["pool_initial","erc721_permit","psp34_base"]}
+crabswap = { path = "../../../", default-features = false,features=["pool_initial","erc721_permit","psp34_base","position_manager"]}
 
 [lib]
 name = "NonfungiblePositionManager"
@@ -41,3 +41,9 @@ std = [
     "crabswap/std",
 ]
 ink-as-dependency = []
+[profile.dev]
+codegen-units = 16
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
