not finish the test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "IERC",
         "inheritdoc",
         "Mintable",
+        "Nonfungible",
         "patract",
         "polkadot",
         "redspot",
