add the mint functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,17 @@
     "cSpell.words": [
         "codegen",
         "crabswap",
+        "elems",
         "encodable",
         "IERC",
         "inheritdoc",
+        "IWETH",
         "Mintable",
+        "multihop",
         "Nonfungible",
         "patract",
         "polkadot",
+        "postions",
         "redspot",
         "secp",
         "seperator",
