add swap router

--- a/swap/Cargo.toml
+++ b/swap/Cargo.toml
@@ -85,6 +85,7 @@ exclude = [
     "contracts/core/factory/",
     "contracts/periphery/NonfungiblePositionManager/",
     "contracts/periphery/NonfungibleTokenPositionDescriptor/",
+    "contracts/periphery/SwapRouter/",
 ]
 
 [profile.dev]
