add oracle test

--- a/swap/contracts/test/OracleTest/Cargo.toml
+++ b/swap/contracts/test/OracleTest/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "OracleTest"
-version = "1.5.0"
-authors = ["Supercolony <dominik.krizo@supercolony.net>"]
+version = "3.0.0-rc9"
+authors = ["Parity Technologies <cloudweisz@gmail.com>"]
 edition = "2021"
 
 [dependencies]
@@ -11,15 +11,17 @@ ink_env = { version = "3.2.0", default-features = false }
 ink_storage = { version = "3.2.0", default-features = false }
 ink_lang = { version = "3.2.0", default-features = false }
 ink_prelude = { version = "3.2.0", default-features = false }
+# primitive-types = { tag="uint-v0.9.3", git = "https://github.com/paritytech/parity-common", default-features = false,features = ["scale-info"] }
+
+
+brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false}
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
-
-# These dependencies
-brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }
 primitives = {version = "3.0.0-rc9",path="../../../primitives/", default-features = false}
 libs = {version = "3.0.0",path="../../../libs/", default-features = false}
 crabswap = { path = "../../../", default-features = false}
+
 [lib]
 name = "OracleTest"
 path = "lib.rs"
@@ -39,10 +41,10 @@ std = [
     "scale/std",
     "scale-info",
     "scale-info/std",
-    "crabswap/std",
-
-    # These dependencies
+    "primitives/std",
+    "libs/std",
     "brush/std",
+    "crabswap/std",
 ]
 ink-as-dependency = []
 [profile.dev]
