--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.1.0",
-        "ethers": "^5.0.8"
+        "ethers": "^5.0.8",
+        "redspot": "^0.13.5",
+        "ts-node": "^10.8.0"
     },
     "scripts": {
         "build:release": "npx redspot compile --release",
