--- a/swap/contracts/test/TickMathTest/Cargo.toml
+++ b/swap/contracts/test/TickMathTest/Cargo.toml
@@ -5,18 +5,18 @@ authors = ["Supercolony <dominik.krizo@supercolony.net>"]
 edition = "2021"
 
 [dependencies]
-ink_primitives = { version = "3.2.0", default-features = false }
-ink_metadata = { version = "3.2.0", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3.2.0", default-features = false }
-ink_storage = { version = "3.2.0", default-features = false }
-ink_lang = { version = "3.2.0", default-features = false }
-ink_prelude = { version = "3.2.0", default-features = false }
+ink_primitives = { version = "~3.3.0", default-features = false }
+ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
+ink_env = { version = "~3.3.0", default-features = false }
+ink_storage = { version = "~3.3.0", default-features = false }
+ink_lang = { version = "~3.3.0", default-features = false }
+ink_prelude = { version = "~3.3.0", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }
+openbrush = { version = "~2.1.0", default-features = false, features = ["psp22"] }
 primitives = {version = "3.0.0-rc9",path="../../../primitives/", default-features = false}
 libs = {version = "3.0.0",path="../../../libs/", default-features = false}
 crabswap = { path = "../../../", default-features = false}
@@ -42,7 +42,7 @@ std = [
     "crabswap/std",
 
     # These dependencies
-    "brush/std",
+    "openbrush/std",
 ]
 ink-as-dependency = []
 
