--- a/swap/primitives/Cargo.toml
+++ b/swap/primitives/Cargo.toml
@@ -5,16 +5,16 @@ authors = ["Parity Technologies <cloudweisz@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-ink_primitives = { version = "3.2.0", default-features = false }
-ink_metadata = { version = "3.2.0", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3.2.0", default-features = false }
-ink_storage = { version = "3.2.0", default-features = false }
-ink_lang = { version = "3.2.0", default-features = false }
-ink_prelude = { version = "3.2.0", default-features = false }
+ink_primitives = { version = "~3.3.0", default-features = false }
+ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
+ink_env = { version = "~3.3.0", default-features = false }
+ink_storage = { version = "~3.3.0", default-features = false }
+ink_lang = { version = "~3.3.0", default-features = false }
+ink_prelude = { version = "~3.3.0", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
-brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false}
+openbrush = { version = "~2.1.0", default-features = false}
 # primitive-types = { git = "https://github.com/paritytech/parity-common", default-features = false}
 
 [dependencies.sp-core]
@@ -41,5 +41,6 @@ std = [
     "scale-info/std",
     # "primitive-types/std",
     "sp-core/std",
+    "openbrush/std",
 ]
 ink-as-dependency = []
