--- a/swap/Cargo.toml
+++ b/swap/Cargo.toml
@@ -3,8 +3,8 @@ name = "crabswap"
 version = "3.0.0-rc9"
 authors = ["Parity Technologies <cloudweisz@gmail.com>"]
 edition = "2021"
-categories = ["no-std", "embedded"]
-include = ["Cargo.toml", "src/**/*.rs"]
+# categories = ["no-std", "embedded"]
+# include = ["Cargo.toml", "src/**/*.rs"]
 
 [dependencies]
 ink_primitives = { version = "~3.3.0", default-features = false }
